# Vybe-Local-Agentic-Container

./: .env.example  .gitignore  INSTALLATION_GUIDE.md  INSTALLER_README.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  Vybe_Setup_Master.iss  Vybe_Setup_Professional.iss  build_desktop.bat  build_installer_master.bat  build_professional_installer.bat  build_verification.bat  diagnose.bat  download_default_model.py  fix_database.py  fix_permissions.bat  generate_icons.py  generate_inno_manifest.py  generate_installer_manifest.py  installer_backend.py  installer_manifest.json  installer_status_window.py  launch_vybe_desktop.bat  launch_vybe_master.bat  package-lock.json  package.json  pre_deploy_fixes.py  pyproject.toml  pyrightconfig.json  rebuild_all.bat  rebuild_all.sh  repair_environment.bat  requirements.txt  run.py  setup_python_env.bat  shutdown.bat  shutdown_quiet.bat  test_imports.py  (+4 more)
.github/: FUNDING.yml
docs/: MASTER_DOCUMENTATION_INDEX.md  README.md
docs/ai-models/: complete-training-guide.md  system-configuration-complete.md
docs/completed-tasks/: README.md  bug-fixes-stability.md  cleanup-summary.md  performance-optimizations.md
docs/getting-started/: complete-installation-guide.md
docs/optimization/: optimization-summary.md
docs/reference/: api-fixes-summary.md  changelog.md  roadmap.md  troubleshooting.md
docs/user-guides/: complete-user-manual.md
instance/: .gitkeep  README.md
models/: README.md
plugins/example-tool-plugin/: README.md  main.py  manifest.json
rag_data/: .gitkeep  README.md
scripts/: preflight_check.py  purge_low_context_models.py  refactor_event_listeners.py  run_functional_tests.py  run_preflight_tests.py  toggle_llm_autostart.py
tests/: test_backend_model_system.py  test_basic.py  test_comprehensive.py  test_sql_injection_fix.py
training_data/vybe_tasks/: README.md  error_handling.txt  system_orchestration.txt  tool_integration.txt  user_interactions.txt  vybe_knowledge.txt
vybe-desktop/: build.bat  build.sh  launcher.bat  loading.css  loading.html  package-lock.json  package.json  verify_setup.py
vybe-desktop/public/: index.html
vybe-desktop/src/: loading.html  main.js
vybe-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vybe-desktop/src-tauri/icons/: icon.icns
vybe-desktop/src-tauri/src/: main.rs
vybe_app/: __init__.py  api_documentation.py  auth.py  commands.py  config.py  logger.py  models.py  models_data.json  tools.py  validation.py  views.py  web_loader.py
vybe_app/api/: __init__.py  agents_api.py  audio_api.py  auto_installer_api.py  chat_api.py  cloud_sync_api.py  code_api.py  collaboration_api.py  connectors_api.py  debug_api.py  devtools_api.py  external_api.py  finetuning_api.py  home_assistant_api.py  image_api.py  llm_backend_api.py  marketplace_api.py  model_api.py  models_api.py  notifications_api.py  orchestrator_api.py  plugin_api.py  rag_api.py  rpg_api.py  settings_api.py  setup_api.py  system_api.py  system_tray_api.py  tools_api.py  update_api.py  user_api.py  users_optimized.py  video_api.py
vybe_app/commands/: __init__.py  file_commands.py  user_commands.py  validation_utils.py
vybe_app/controllers/: api_controller.py  websocket_controller.py
vybe_app/core/: __init__.py  agent_manager.py  audio_io.py  backend_llm_controller.py  cloud_sync_manager.py  code_interpreter.py  collaboration_manager.py  context_manager.py  context_optimizer.py  custom_tts_engine.py  dynamic_model_selector.py  edge_tts_controller.py  enterprise_features.py  error_manager.py  first_launch_manager.py  hardware_manager.py  hardware_safety.py  home_assistant_controller.py  home_assistant_tool.py  installation_monitor.py  job_manager.py  manager_model.py  marketplace_manager.py  model_router.py  model_sources_manager.py  notifications.py  plugin_manager.py  prompt_assistant.py  pyttsx3_tts_controller.py  rpg_engine.py  search_tools.py  setup_manager.py  stable_diffusion_controller.py  system_monitor.py  system_tray_manager.py  transcription_controller.py  tts_controller.py  update_notifier.py  video_generator.py  websocket_manager.py
vybe_app/rag/: __init__.py  text_processing.py  vector_db.py  web_search.py
vybe_app/routes/: home_assistant.py  knowledge_base.py
vybe_app/scrapers/: __init__.py
vybe_app/services/: health_monitor.py  model_manager.py  performance_analytics.py  user_service.py  user_service_clean.py
vybe_app/static/: manifest.json
vybe_app/templates/: _head.html  _header_new.html  _scripts.html  agents.html  api_docs.html  audio_lab.html  (+18 more)
(+137 files in other folders)
