[package]
name = "vybe-desktop"
version = "1.2.0"
description = "Vybe AI Desktop"
authors = ["You"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8", features = [ "notification-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize", "global-shortcut", "http-all"] }
# tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros"] }
reqwest = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
